# TrafficSim

./: AI_READY_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: car.rs  factory.rs  house.rs  interface.rs  intersection.rs  lib.rs  main.rs  road.rs  road_network.rs  shop.rs  stats.rs  two_way_road.rs  ui.rs  world.rs
src/simulation/: building.rs  car.rs  car_manager.rs  factory.rs  game_state.rs  intersection.rs  mod.rs  road_network.rs  types.rs  world.rs
src/ui/: building.rs  components.rs  input.rs  mod.rs  spawner.rs  sync.rs  world.rs
tests/: game_tests.rs  simulation_test.rs
