[package]
name = "traffic_sim"
version = "0.1.0"
edition = "2021"

[features]
default = ["ui"]
ui = ["bevy"]

[dependencies]
bevy = { version = "0.17", optional = true }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rand = "0.9.2"
anyhow = "1.0"
petgraph = "0.8.3"
sorted-vec = "0.8.10"
ordered-float = "5.1.0"
